--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MovieInfoChecker</string>
+    <string name="find">find</string>
+    <string name="search">search</string>
+    <string name="popular">Popular</string>
+    <string name="top_250">Top 250</string>
+    <string name="test_title">Title of movie</string>
+    <string name="test_crew">Ivan ivanov, Petr petrov</string>
+    <string name="test_rating">6.7</string>
+    <string name="test_number">12</string>
+    <string name="test_growth">+336</string>
 </resources>
