--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="test_rating">6.7</string>
     <string name="test_number">12</string>
     <string name="test_growth">+336</string>
+    <string name="test_year">2020</string>
 </resources>
