--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
     <string name="test_number">12</string>
     <string name="test_growth">+336</string>
     <string name="test_year">2020</string>
+    <string name="test_plot">Dom Cobb is a skilled thief, the absolute best in the dangerous art of extraction, stealing
+        valuable secrets from deep within the subconscious during the dream state, when the mind is at its most
+        vulnerable. Cobb\'s rare ability has made him a coveted player in this treacherous new world of corporate
+        espionage, but it has also made him an international fugitive and cost him everything he has ever loved.
+    </string>
+    <string name="test_duration">2h 28mins</string>
+    <string name="test_directors">Christopher Nolan</string>
+    <string name="test_genres">Action, Adventure, Sci-Fi, Thriller</string>
+    <string name="test_stars">Leonardo DiCaprio, Joseph Gordon-Levitt, Elliot Page, Ken Watanabe</string>
+    <string name="test_actor_name">Leonardo DiCaprio</string>
+    <string name="test_role">Cobb</string>
 </resources>
