--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="test_stars">Leonardo DiCaprio, Joseph Gordon-Levitt, Elliot Page, Ken Watanabe</string>
     <string name="test_actor_name">Leonardo DiCaprio</string>
     <string name="test_role">Cobb</string>
+    <string name="trailer">Trailer</string>
 </resources>
